Fix settings menu overflow

--- a/client/src/standalone/player/src/sass/shared/settings-menu.scss
+++ b/client/src/standalone/player/src/sass/shared/settings-menu.scss
@@ -10,7 +10,6 @@ $setting-transition-easing: ease-out;
 
 .video-js {
   .vjs-settings-sub-menu-title {
-    width: 4em;
     text-transform: initial;
   }
 
